Fix admin resource page hidding behind navbar
Refs #735.

--- a/app/assets/styles/_application-variables.scss
+++ b/app/assets/styles/_application-variables.scss
@@ -49,6 +49,7 @@ $font-weight-light:      200;
 $favorite-color:         #BF0863;
 $max-map-z-index:        1000;
 $input-box-shadow-focus: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
+$force-open-navbar-screen-width: 1280px;
 
 // Buttons
 $element-size-medium:          38px;
